samples/_failures_safe/1761090625_e7a5b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f755a4f.c: In function ‘main’:
./samples/SAFE/__tmp_9f755a4f.c:140:12: error: expected identifier or ‘(’ at end of input
  140 |     struct Compression
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_9f755a4f.c:140:12: error: expected declaration or statement at end of input
